# Projekt_kalkulator_c-

Kalkulator_MS_V1.1/: CMakeLists.txt  Dokumentacja_MS_V1.1.docx  ~$kumentacja_MS_V1.1.docx
Kalkulator_MS_V1.1/Kalkulator_MS_V1.1/: CMakeLists.txt  Kalkulator_MS.cpp  Kalkulator_MS.h  Main_Kalkulator_V1.cpp
